[gd_scene load_steps=12 format=3 uid="uid://cxpe6t2tdbvif"]

[ext_resource type="Script" uid="uid://cincr4cu80ixr" path="res://escenas/usuario/MenuInicial/Temas_Principiante/Tema_Electronica/EJercicios/semiabiertas/semi_abiertas_electronica.gd" id="1_qp1kt"]
[ext_resource type="Texture2D" uid="uid://bgnffnt45rlhx" path="res://assets/sprites/ui/lupa.png" id="2_v37rc"]
[ext_resource type="PackedScene" uid="uid://ij704rh06ujv" path="res://escenas/volverBTN.tscn" id="3_5tbuw"]
[ext_resource type="Texture2D" uid="uid://feyahj0mae46" path="res://assets/sprites/globoTexto .png" id="4_obv1d"]
[ext_resource type="Texture2D" uid="uid://bhtap0c20qsdp" path="res://assets/sprites/ui/Galileo/boca alargada ojos cerrados.png" id="5_7m0c5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7arhx"]
bg_color = Color(0.184314, 0.12549, 0.278431, 0.686275)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t1jeb"]
texture = ExtResource("2_v37rc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0hp4"]
texture = ExtResource("2_v37rc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0241m"]
texture = ExtResource("2_v37rc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k4n5y"]
border_width_left = 5
border_width_top = 2
border_width_right = 5
border_width_bottom = 2
border_color = Color(0.0445578, 0.0445579, 0.0445578, 1)
corner_radius_top_left = 110
corner_radius_top_right = 40
corner_radius_bottom_right = 5
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rpgwd"]
bg_color = Color(0.034876, 0.0165234, 0.0686929, 0.447059)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="SemiAbiertasELectronica" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qp1kt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.152941, 0.329412, 1)

[node name="TextoPregunta1" type="Label" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 176.0
offset_right = 651.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "CARGANDO..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextoPregunta2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 82.0
offset_top = 581.0
offset_right = 654.0
offset_bottom = 767.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Hola esta es una prueba de texto"
horizontal_alignment = 1
autowrap_mode = 2

[node name="respuesta" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.207
anchor_top = 0.33
anchor_right = 0.801
anchor_bottom = 0.391
offset_left = -11.04
offset_top = 104.6
offset_right = -10.72
offset_bottom = 183.52
theme_override_font_sizes/font_size = 16
placeholder_text = "ESCRIBE TU RESPUESTA"

[node name="validar" type="Button" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 754.0
offset_right = 505.0
offset_bottom = 815.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_7arhx")
text = "Validar"

[node name="Pista" type="Button" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 731.0
offset_right = 665.0
offset_bottom = 827.0
theme_override_styles/focus = SubResource("StyleBoxTexture_t1jeb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_s0hp4")
theme_override_styles/normal = SubResource("StyleBoxTexture_0241m")

[node name="Mensaje" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.738
anchor_right = 0.906
anchor_bottom = 0.886
offset_left = 1.0
offset_top = 0.359985
offset_right = 0.679993
offset_bottom = -0.0800781
theme_override_font_sizes/font_size = 27
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VolverBtn" parent="." instance=ExtResource("3_5tbuw")]
layout_mode = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 719.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 43
text = "ELECTRONICA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelRetroalimentacion" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -239.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_k4n5y")

[node name="ColorRect" type="ColorRect" parent="PanelRetroalimentacion"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -166.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.623529, 0.113725, 1, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="PanelRetroalimentacion"]
layout_mode = 0
offset_left = 104.0
offset_top = -216.0
offset_right = 611.0
offset_bottom = 74.0
texture = ExtResource("4_obv1d")

[node name="LabelRetroalimentacion" type="Label" parent="PanelRetroalimentacion"]
layout_mode = 0
offset_left = 182.0
offset_top = -135.0
offset_right = 531.0
offset_bottom = -1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "HOLA PRIEBA"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Galileo" type="TextureRect" parent="PanelRetroalimentacion"]
layout_mode = 0
offset_left = 48.0
offset_top = -28.0
offset_right = 304.0
offset_bottom = 228.0
texture = ExtResource("5_7m0c5")

[node name="BotonSiguiente" type="Button" parent="PanelRetroalimentacion"]
layout_mode = 0
offset_left = 467.0
offset_top = 63.0
offset_right = 692.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_rpgwd")
text = "siguiente"

[connection signal="pressed" from="validar" to="." method="_on_validar_pressed"]
[connection signal="pressed" from="Pista" to="." method="_on_pista_pressed"]
